--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Island+Moments&family=Karla:wght@400;500;700&family=Raleway:ital,wght@0,600;0,700;1,400&family=Ubuntu:wght@300;400;500;700&display=swap"
+    rel="stylesheet">
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -9,14 +15,15 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-  <title>Git Test</title>
+  <link rel="stylesheet" href="bootstrap.min.css" />
+  <title>Calculator</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-
+  <script src="bootstrap.bundle.min.js">
+  </script>
 </body>
 
 </html>
